--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pomelo",
+  "name": "pomelo-zdhsoft",
   "version": "2.2.5",
-  "homepage": "https://github.com/NetEase/pomelo",
+  "homepage": "https://github.com/zdhsoft/pomelo",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NetEase/pomelo.git"
+    "url": "https://github.com/zdhsoft/pomelo.git"
   },
   "scripts": {
     "test": "grunt"
@@ -22,6 +22,7 @@
     "game",
     "web",
     "realtime",
+    "pomelo-zdhsoft",
     "server"
   ],
   "dependencies": {
